fixed overflow on nav

--- a/css/foo.styl
+++ b/css/foo.styl
@@ -162,7 +162,7 @@ header
     margin 0
     padding 0
     height menuheight
-    overflow scroll
+    overflow hidden
 
     +below(mobile)
       width 300px
